NEWS-feat-38a10.10: Now fresh news are visible on all pages with navbar. Also misc fixes and features

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -541,6 +541,11 @@ th.c_j, td.c_j
   cursor: pointer;
 }
 
+.pointer
+{
+  cursor: pointer;
+}
+
 #universe_main img {
   border: 0px;
   cursor: pointer;
