MISC-fix-38a10.21: Bugfixes

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -18,7 +18,7 @@
         <tr><th class="c_c" colspan="2">{L_opt_adm_title}</th></tr>
         <tr>
           <th><label for="adm_pl_prot">{L_opt_adm_planet_prot}</label></th>
-          <th><input name="adm_pl_prot"{adm_pl_prot_data} type="checkbox" id="adm_pl_prot" /></th>
+          <th><input name="adm_pl_prot" <!-- IF adm_pl_prot -->checked<!-- ENDIF --> type="checkbox" id="adm_pl_prot" /></th>
         </tr>
       <!-- ENDIF -->
 
