--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -232,8 +232,8 @@
       <!-- ENDIF -->
       <tr>
         <td class="c_l" colspan="2">
-          <input name="deltime" type="checkbox" id="deltime" {opt_delac_data} /> <label for="deltime">{L_deleteaccount}. {L_deleteaccount_tip}</label><br />
-          {L_deleteaccount_on} <span id="delete_on"></span>
+          <input name="deltime" type="checkbox" id="deltime" <!-- IF deltime -->checked<!-- ENDIF --> /> <label for="deltime">{L_deleteaccount}. {L_deleteaccount_tip}</label><br />
+          {L_deleteaccount_on} <!-- IF deltime -->{deltime_text}<!-- ELSE --><span id="delete_on"></span><!-- ENDIF -->
         </td>
       </tr>
       <tr>
