--- a/design/templates/OpenGame/announce.tpl.html
+++ b/design/templates/OpenGame/announce.tpl.html
@@ -34,7 +34,7 @@
 <table width="519">
   <tr><td class="c" colspan="<!-- IF AUTHLEVEL >= 3 -->5<!-- ELSE -->2<!-- ENDIF -->"><div class="fl">{L_news_title}</div><div class="fr">{L_news_total} {NEWS_COUNT}</div></td></tr>
   <tr>
-    <th>{L_news_date}</th>
+    <!--<th>{L_news_date}</th>-->
     <th width="100%">{L_news_announce}</th>
     <!-- IF AUTHLEVEL >= 3 -->
       <th><img src="design/images/icon_edit.png"></th>
