--- a/design/templates/OpenGame/fleet0.tpl.html
+++ b/design/templates/OpenGame/fleet0.tpl.html
@@ -51,7 +51,7 @@ var speed_factor   = {speed_factor};
               &nbsp;
             <!-- ELSE -->
               <script type="text/javascript"><!--
-                sn_ainput_make('ships[{ships.ID}]', {max: ships[{ships.ID}][0]});
+                sn_ainput_make('ships[{ships.ID}]', {max: ships[{ships.ID}][0], button_max: true, button_zero: true});
 
                 jQuery('#ships{ships.ID}slide').bind('slide slidechange', fl_calc_stats);
               --></script>
@@ -62,21 +62,21 @@ var speed_factor   = {speed_factor};
       <!-- IF FLYING_FLEETS < MAX_FLEETS -->
         <tr class="c_c">
           <th><input type="button" value="{L_flt_gather_all}" onclick="document.location = 'fleet.php?fleet_page=5';"></th>
-          <th><input type="submit" value="{L_fl_continue}" /></th>
-          <th style="padding-right: 0; border-right: 0" class="c_l" <!-- IF MAX_EXPEDITIONS <= 1 --> colspan="2"<!-- ENDIF -->><input type="button" value="{L_fl_unselectall}" onclick="javascript:zero_fleet();"></th>
-          <!-- IF MAX_EXPEDITIONS > 1 -->
-          <th class="c_c" width="50px"><input type="button" value="1/{MAX_EXPEDITIONS}" onclick="javascript:expe_fleet({MAX_EXPEDITIONS});"></th>
-          <!-- ENDIF -->
-          <th  style="padding-left: 0; border-left: 0" class="c_r"><input type="button" value="{L_fl_selectall}" onclick="javascript:max_fleet();"></th>
-<!--
-            <div class="fl"><input type="button" value="{L_fl_unselectall}" onclick="javascript:zero_fleet();"></div>
-
-            <-- IF MAX_EXPEDITIONS > 1 ->
-            <div><input type="button" value="1/{MAX_EXPEDITIONS}" onclick="javascript:zero_fleet();"></div>
-            <-- ENDIF ->
-
-            <div class="fr"><input type="button" value="{L_fl_selectall}" onclick="javascript:max_fleet();"></div>
--->
+          <th style="padding-right: 0; border-right: 0" class="c_l" ><input type="button" value="{L_fl_unselectall}" onclick="javascript:zero_fleet();"></th>
+          <th class="c_c">
+            <!-- IF MAX_EXPEDITIONS > 1 -->
+            <input type="button" value="1/{MAX_EXPEDITIONS}" onclick="javascript:expe_fleet({MAX_EXPEDITIONS});">
+            <!-- ENDIF -->
+            <!-- IF FREE_EXPEDITIONS > 1 && MAX_EXPEDITIONS > 1 -->
+            &nbsp;&nbsp;&nbsp;<input type="button" value="1/{FREE_EXPEDITIONS}" onclick="javascript:expe_fleet({FREE_EXPEDITIONS});">
+            <!-- ENDIF -->
+          </th>
+          <th  style="padding-left: 0; border-left: 0" class="c_r">
+            <input type="button" value="{L_fl_selectall}" onclick="javascript:max_fleet();">
+          </th>
+        </tr>
+        <tr class="c_c">
+          <th colspan="4"><input type="submit" value="{L_fl_continue}" /></th>
         </tr>
       <!-- ELSE -->
         <tr>
